pages/landing implementation

--- a/sections/page-landing.liquid
+++ b/sections/page-landing.liquid
@@ -159,7 +159,7 @@
             </div>
             <div class="footer__section">
                 <div class="footer__title">Contacts</div><a class="footer__contact" href="mailto:care@unidragon.com"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--mail">
-                            <use xlink:href="{{ 'landing-sprite.svg#mail' | asset_url }}"></use>
+                            <use xlink:href="#mail"></use>
                         </svg></span><span class="footer__contact-caption">care@unidragon.com</span></a>
             </div><img class="footer__visual-1" src="{{ 'landing-footer-1.png' | asset_url }}" srcset="{{ 'landing-footer-1.png' | asset_url }} 1x, {{ 'landing-footer-1@2x.png' | asset_url }} 2x" width="360" height="360" alt="" /><img class="footer__visual-2" src="{{ 'landing-footer-2.png' | asset_url }}" srcset="{{ 'landing-footer-2.png' | asset_url }} 1x, {{ 'landing-footer-2@2x.png' | asset_url }} 2x" width="355" height="224" alt="" /><img class="footer__visual-3" src="{{ 'landing-footer-3.png' | asset_url }}" srcset="{{ 'landing-footer-3.png' | asset_url }} 1x, {{ 'landing-footer-3@2x.png' | asset_url }} 2x" width="433" height="175" alt="" />
         </div>
