--- a/sections/page-landing.liquid
+++ b/sections/page-landing.liquid
@@ -23,23 +23,23 @@
                         <div class="advantages__item-text">You can find the most complete r&nbsp;ange of&nbsp;<b>new products only on&nbsp;our website</b></div>
                     </div>
                 </div>
-                <div class="advantages__button-wrapper"><a class="button advantages__button" href="#" role="button">Order on our website</a></div>
+                <div class="advantages__button-wrapper"><a class="button advantages__button" href="https://unidragon.com/collections/wooden-puzzles/?utm_source=instagram_tap" role="button">Order on our website</a></div>
             </div><img class="advantages__figure" src="{{ 'landing-figure-5.png' | asset_url }}" srcset="{{ 'landing-figure-5.png' | asset_url }} 1x, {{ 'landing-figure-5@2x.png' | asset_url }} 2x" width="88" height="181" alt="" />
         </section>
         <section class="ordering ordering--en" id="ordering">
             <div class="ordering__container">
                 <h2 class="title ordering__title">You can also order our puzzles</h2><img class="ordering__visual" src="{{ 'landing-ordering-visual.png' | asset_url }}" srcset="{{ 'landing-ordering-visual.png' | asset_url }} 1x, {{ 'landing-ordering-visual@2x.png' | asset_url }} 2x" width="370" height="370" alt="" />
                 <div class="ordering__items">
-                    <div class="ordering__item"><img class="ordering__item-img" src="{{ 'landing-ordering-amazon.png' | asset_url }}" srcset="{{ 'landing-ordering-amazon.png' | asset_url }} 1x, {{ 'landing-ordering-amazon@2x.png' | asset_url }} 2x" width="360" height="157" alt="Amazon" /><a class="button ordering__item-button button--ordering" href="#" role="button"><span class="button__caption">Order on</span><img class="button__img" src="{{ 'landing-amazon.png' | asset_url }}" srcset="{{ 'landing-amazon.png' | asset_url }} 1x, {{ 'landing-amazon@2x.png' | asset_url }} 2x" alt="amazon" /></a></div>
-                    <div class="ordering__item"><img class="ordering__item-img" src="{{ 'landing-ordering-etsy.png' | asset_url }}" srcset="{{ 'landing-ordering-etsy.png' | asset_url }} 1x, {{ 'landing-ordering-etsy@2x.png' | asset_url }} 2x" width="360" height="157" alt="Etsy" /><a class="button ordering__item-button button--ordering" href="#" role="button"><span class="button__caption">Order on</span><img class="button__img" src="{{ 'landing-etsy.png' | asset_url }}" srcset="{{ 'landing-etsy.png' | asset_url }} 1x, {{ 'landing-etsy@2x.png' | asset_url }} 2x" alt="etsy" /></a></div>
-                    <div class="ordering__item"><img class="ordering__item-img" src="{{ 'landing-ordering-walmart.png' | asset_url }}" srcset="{{ 'landing-ordering-walmart.png' | asset_url }} 1x, {{ 'landing-ordering-walmart@2x.png' | asset_url }} 2x" width="360" height="157" alt="Walmart" /><a class="button ordering__item-button button--ordering" href="#" role="button"><span class="button__caption">Order on</span><img class="button__img" src="{{ 'landing-walmart.png' | asset_url }}" srcset="{{ 'landing-walmart.png' | asset_url }} 1x, {{ 'landing-walmart@2x.png' | asset_url }} 2x" alt="walmart" /></a></div>
+                    <div class="ordering__item"><img class="ordering__item-img" src="{{ 'landing-ordering-amazon.png' | asset_url }}" srcset="{{ 'landing-ordering-amazon.png' | asset_url }} 1x, {{ 'landing-ordering-amazon@2x.png' | asset_url }} 2x" width="360" height="157" alt="Amazon" /><a class="button ordering__item-button button--ordering" href="https://www.amazon.com/stores/Uniquewoodenpuzzles/page/B2976332-EDE0-4EA3-B4FE-B15714AA41E2?maas=maas_adg_89E0DE2BE316CB1F7D5FED806C85E10F_afap_abs&ref_=aa_maas&tag=maas&ref_=ast_bln" role="button"><span class="button__caption">Order on</span><img class="button__img" src="{{ 'landing-amazon.png' | asset_url }}" srcset="{{ 'landing-amazon.png' | asset_url }} 1x, {{ 'landing-amazon@2x.png' | asset_url }} 2x" alt="amazon" /></a></div>
+                    <div class="ordering__item"><img class="ordering__item-img" src="{{ 'landing-ordering-etsy.png' | asset_url }}" srcset="{{ 'landing-ordering-etsy.png' | asset_url }} 1x, {{ 'landing-ordering-etsy@2x.png' | asset_url }} 2x" width="360" height="157" alt="Etsy" /><a class="button ordering__item-button button--ordering" href="https://www.etsy.com/shop/unidragonpuzzle?ref=simple-shop-header-name&listing_id=726260576" role="button"><span class="button__caption">Order on</span><img class="button__img" src="{{ 'landing-etsy.png' | asset_url }}" srcset="{{ 'landing-etsy.png' | asset_url }} 1x, {{ 'landing-etsy@2x.png' | asset_url }} 2x" alt="etsy" /></a></div>
+                    <div class="ordering__item"><img class="ordering__item-img" src="{{ 'landing-ordering-walmart.png' | asset_url }}" srcset="{{ 'landing-ordering-walmart.png' | asset_url }} 1x, {{ 'landing-ordering-walmart@2x.png' | asset_url }} 2x" width="360" height="157" alt="Walmart" /><a class="button ordering__item-button button--ordering" href="https://www.walmart.com.mx/" role="button"><span class="button__caption">Order on</span><img class="button__img" src="{{ 'landing-walmart.png' | asset_url }}" srcset="{{ 'landing-walmart.png' | asset_url }} 1x, {{ 'landing-walmart@2x.png' | asset_url }} 2x" alt="walmart" /></a></div>
                 </div>
             </div>
         </section>
         <section class="collection" id="new">
             <div class="collection__container">
                 <div class="collection__headline">
-                    <h2 class="title collection__title">New</h2><a class="collection__view-all" href="#">View all new items</a>
+                    <h2 class="title collection__title">New</h2><a class="collection__view-all" href="https://unidragon.com/">View all new items</a>
                 </div>
                 <div class="collection__items">
                     <div class="c-product collection__item">
@@ -84,7 +84,7 @@
         <div class="collection" id="hits">
             <div class="collection__container">
                 <div class="collection__headline">
-                    <h2 class="title collection__title">Bestsellers</h2><a class="collection__view-all" href="#">View all bestsellers</a>
+                    <h2 class="title collection__title">Bestsellers</h2><a class="collection__view-all" href="https://unidragon.com/">View all bestsellers</a>
                 </div>
                 <div class="collection__items">
                     <div class="c-product collection__item">
@@ -129,7 +129,7 @@
         <div class="collection collection--padding-bottom" id="popular">
             <div class="collection__container">
                 <div class="collection__headline">
-                    <h2 class="title collection__title">Popular collections</h2><a class="collection__view-all" href="#">View all collections</a>
+                    <h2 class="title collection__title">Popular collections</h2><a class="collection__view-all" href="https://unidragon.com/collections">View all collections</a>
                 </div>
                 <div class="collection__categories">
                     <div class="c-category collection__category">
