--- a/sections/page-landing.liquid
+++ b/sections/page-landing.liquid
@@ -155,7 +155,7 @@
         <div class="footer__container">
             <div class="footer__section">
                 <div class="footer__title">Cooperation</div>
-                <div class="footer__links"><a class="footer__link" href="#">PR in USA</a><a class="footer__link" href="#">PR in EU</a></div>
+                <div class="footer__links"><a class="footer__link" href="https://www.instagram.com/unidragon.marketing/">PR in USA</a><a class="footer__link" href="https://www.instagram.com/unidragon.marketing.eu/">PR in EU</a></div>
             </div>
             <div class="footer__section">
                 <div class="footer__title">Contacts</div><a class="footer__contact" href="mailto:care@unidragon.com"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--mail">
