--- a/sections/page-landing.liquid
+++ b/sections/page-landing.liquid
@@ -207,6 +207,18 @@
                 "type": "product",
                 "id": "landing_best_product",
                 "label": "Product for section"
+            },
+            {
+                "type": "text",
+                "id": "rating",
+                "label": "Rating",
+                "default": "5.0"
+            },
+            {
+                "type": "text",
+                "id": "reviews",
+                "label": "Reviews count",
+                "default": "100 reviews"
             }
         ]
     },
