--- a/sections/page-landing.liquid
+++ b/sections/page-landing.liquid
@@ -54,7 +54,7 @@
                             <div class="c-product__main">
                                 <div class="c-product__image"><img src="{{ block.settings.landing_new_product.featured_image | img_url: 'master' }}" width="360" height="360" alt="Fiery Fox" /></div>
                                 <div class="c-product__info">
-                                    <div class="stars c-product__stars" title="5"><span class="stars__rating" style="width:100%"></span></div><span class="c-product__rating">5.0</span><span class="c-product__reviews">(30 reviews)</span>
+                                    <div class="stars c-product__stars" title="5"><span class="stars__rating" style="width:100%"></span></div><span class="c-product__rating">{{ block.settings.landing_new_product.rating }}</span><span class="c-product__reviews">({{ block.settings.reviews }})</span>
                                 </div>
                                 <div class="c-product__title">{{ block.settings.landing_new_product.title }}</div>
                             </div>
@@ -78,7 +78,7 @@
                             <div class="c-product__main">
                                 <div class="c-product__image"><img src="{{ block.settings.landing_best_product.featured_image | img_url: 'master' }}" width="360" height="360" alt="Fiery Fox" /></div>
                                 <div class="c-product__info">
-                                    <div class="stars c-product__stars" title="5"><span class="stars__rating" style="width:100%"></span></div><span class="c-product__rating">5.0</span><span class="c-product__reviews">(30 reviews)</span>
+                                    <div class="stars c-product__stars" title="5"><span class="stars__rating" style="width:100%"></span></div><span class="c-product__rating">{{ block.settings.landing_new_product.rating }}</span><span class="c-product__reviews">({{ block.settings.reviews }})</span>
                                 </div>
                                 <div class="c-product__title">{{ block.settings.landing_best_product.title }}</div>
                             </div>
@@ -196,6 +196,18 @@
                 "type": "product",
                 "id": "landing_new_product",
                 "label": "Product for section"
+            },
+            {
+                "type": "text",
+                "id": "rating",
+                "label": "Rating",
+                "default": "5.0"
+            },
+            {
+                "type": "text",
+                "id": "reviews",
+                "label": "Reviews count",
+                "default": "100 reviews"
             }
         ]
     },
