UN-1162 Создать новую страницу на сайте

--- a/sections/page-landing.liquid
+++ b/sections/page-landing.liquid
@@ -54,7 +54,7 @@
                             <div class="c-product__main">
                                 <div class="c-product__image"><img src="{{ block.settings.landing_new_product.featured_image | img_url: 'master' }}" width="360" height="360" alt="Fiery Fox" /></div>
                                 <div class="c-product__info">
-                                    <div class="stars c-product__stars" title="5"><span class="stars__rating" style="width:100%"></span></div><span class="c-product__rating">{{ block.settings.landing_new_product.rating }}</span><span class="c-product__reviews">({{ block.settings.reviews }})</span>
+                                    <div class="stars c-product__stars" title="5"><span class="stars__rating" style="width:100%"></span></div><span class="c-product__rating">{{ block.settings.rating }}</span><span class="c-product__reviews">({{ block.settings.reviews }})</span>
                                 </div>
                                 <div class="c-product__title">{{ block.settings.landing_new_product.title }}</div>
                             </div>
@@ -78,7 +78,7 @@
                             <div class="c-product__main">
                                 <div class="c-product__image"><img src="{{ block.settings.landing_best_product.featured_image | img_url: 'master' }}" width="360" height="360" alt="Fiery Fox" /></div>
                                 <div class="c-product__info">
-                                    <div class="stars c-product__stars" title="5"><span class="stars__rating" style="width:100%"></span></div><span class="c-product__rating">{{ block.settings.landing_new_product.rating }}</span><span class="c-product__reviews">({{ block.settings.reviews }})</span>
+                                    <div class="stars c-product__stars" title="5"><span class="stars__rating" style="width:100%"></span></div><span class="c-product__rating">{{ block.settings.rating }}</span><span class="c-product__reviews">({{ block.settings.reviews }})</span>
                                 </div>
                                 <div class="c-product__title">{{ block.settings.landing_best_product.title }}</div>
                             </div>
