--- a/layout/theme.landing.liquid
+++ b/layout/theme.landing.liquid
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LG4GHBSXKB"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LG4GHBSXKB');
+    </script>
+
     <meta charset="utf-8" />
     <title>Fascinating wooden puzzles</title>
     <meta name="description" content="" />
