UN-1162 Создать новую страницу на сайте

--- a/sections/page-landing.liquid
+++ b/sections/page-landing.liquid
@@ -112,7 +112,7 @@
         <div class="footer__container">
             <div class="footer__section">
                 <div class="footer__title">Cooperation</div>
-                <div class="footer__links"><a class="footer__link" href="{{ section.settings.pr_in_usa }}">PR in USA</a><a class="footer__link" href="{{ section.settings.eu }}">PR in EU</a></div>
+                <div class="footer__links"><a class="footer__link" href="{{ section.settings.pr_in_usa }}">PR in USA</a><a class="footer__link" href="{{ section.settings.pr_in_eu }}">PR in EU</a></div>
             </div>
             <div class="footer__section">
                 <div class="footer__title">Contacts</div><a class="footer__contact" href="mailto:care@unidragon.com"><span class="footer__contact-icon"><svg class="svg-icon svg-icon--mail">
