UN-1162 Создать новую страницу на сайте

--- a/sections/page-landing.liquid
+++ b/sections/page-landing.liquid
@@ -249,6 +249,22 @@
                 "label": "Collection Image"
             }
         ]
+    },
+    {
+        "name": "Popular collections",
+        "type": "Collection",
+        "settings": [
+            {
+                "type": "product",
+                "id": "landing_collection",
+                "label": "Collection for section"
+            },
+            {
+                "type": "image_picker",
+                "id": "image_collection",
+                "label": "Collection Image"
+            }
+        ]
     }
   ]
 }
