--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -872,6 +872,7 @@
     {{ 'magnific-popup.css' | asset_url | stylesheet_tag }}
     {{ 'jquery.magnific-popup.min.js' | asset_url | script_tag }}
  <style>
+     .go-cart-item__single .comparet-at-price {text-decoration: line-through; color:#a6a6a6; padding-right: 3px;position: absolute;bottom: 30px;right: 60px;}
      .go-cart-drawer-upsell .comparet-at-price {text-decoration: line-through; color:#a6a6a6; padding-right: 3px;position: relative; top: -30px;}
      .go-cart__button.checkout {
          display: block;
