--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -447,6 +447,8 @@ twq('track','PageView');
     }()
   }]);
   $("body").on("DOMNodeInserted",function(){$("#chat-24-icon-7")&&$("#chat-24-icon-7").click(function(){$("#smile-ui-container").css("z-index",3e3)})});
+
+  $(".reputon-trustpilot-reviews-widget").hide();
 </script>
 
 
