Переключатель языка, позиция

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -232,7 +232,7 @@ snaptr('track', 'PAGE_VIEW');
 
 </script>
 <!-- End Snap Pixel Code -->
-  
+<span class="ly-custom-1920"></span>
   
    <!-- DV 11/03/21 geotargetly -->
 <script>
