--- a/sections/product-giftcart-template.liquid
+++ b/sections/product-giftcart-template.liquid
@@ -503,15 +503,14 @@
     </div>
   </div>
   <style>
-    .banner-inspirational-gift.test {display: none;}
     @media only screen and (min-width: 749px) {
-       .test .banner-inspirational-gift_header, .test .banner-inspirational-gift_link, .test .banner-inspirational-gift_text {
+       .banner-inspirational-gift_header, .banner-inspirational-gift_link, .banner-inspirational-gift_text {
           padding-left: 145px;
           padding-right: 15px;
         }
         }
     </style>
-    <div class="banner-inspirational-gift test">
+    <div class="banner-inspirational-gift">
       <div class="banner-inspirational-gift_header">Send a gift to a friend!<br /> It is so easy!</div>
       <div class="banner-inspirational-gift_text"> Share a piece of your heart to your loved ones, wherever they are. Make them happy with an unforgettable gift for any occasion.<br />
         Take just a few sipmle steps!</div>
