--- a/sections/product-template-mandala-new-2.liquid
+++ b/sections/product-template-mandala-new-2.liquid
@@ -568,7 +568,7 @@
     {%- else -%}
                <p class="product-single__price product-single__price-{{ section.id }}{% unless current_variant.available %} product-price--sold-out{% endunless %}">
                 {% if current_variant.compare_at_price > current_variant.price %}
-                  <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
+                  <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span> <span class="from-ab-test" style="display:none;">from </span>
                   <s id="ComparePrice-{{ section.id }}">{{ current_variant.compare_at_price | money }}</s>
                   <span class="product-price__price product-price__price-{{ section.id }} product-price__sale product-price__sale--single">
                     <span id="ProductPrice-{{ section.id }}"
@@ -603,7 +603,7 @@
                     {% endif %}
                   </span>
                 {% else %}
-                  <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span>
+                  <span class="visually-hidden">{{ 'products.product.regular_price' | t }}</span> <span class="from-ab-test" style="display:none;">from </span>
                   <s id="ComparePrice-{{ section.id }}" class="hide">{{ current_variant.compare_at_price | money }}</s>
                   <span class="product-price__price product-price__price-{{ section.id }}">
                     <span id="ProductPrice-{{ section.id }}" itemprop="price" content="{{ current_variant.price | times: discount_amount | divided_by: 100.00 }}">
