UN-1198 gift-for-review page template created

--- a/sections/gift-for-review.liquid
+++ b/sections/gift-for-review.liquid
@@ -81,6 +81,7 @@
   "blocks": [
     {
         "type": "Instagram",
+        "name": "Instagram",
         "settings": [
             {
                 "type": "text",
@@ -98,6 +99,7 @@
     },
     {
         "type": "Youtube",
+        "name": "Youtube",
         "settings": [
             {
                 "type": "text",
@@ -115,6 +117,7 @@
     },
     {
         "type": "Pinterest",
+        "name": "Pinterest",
         "settings": [
             {
                 "type": "text",
@@ -132,6 +135,7 @@
     },
     {
         "type": "Facebook",
+        "name": "Facebook",
         "settings": [
             {
                 "type": "text",
@@ -149,6 +153,7 @@
     },
     {
         "type": "Twiter",
+        "name": "Twiter",
         "settings": [
             {
                 "type": "text",
