UN-1198 gift-for-review page template created

--- a/sections/gift-for-review.liquid
+++ b/sections/gift-for-review.liquid
@@ -1,20 +1,163 @@
+<div class="page-width">
+    <div class="section-header text-center">
+        <h1>{{ page.title }}</h1>
+    </div>
+    <div class="rte">
+        <div class="simple_steps">
+            <div class="simple_steps-wrapper">
+                <div class="simple_item simple_item-first">
+                    <div class="simple_item-img">
+                        <img src="{{ section.settings.step_1_image  | img_url: 'master' }}" alt="">
+                    </div>
+                    <div class="simple_item-content">
+                        <p>{{ section.settings.step_1_text }}</p>
+                    </div>
+                </div>
+                <div class="simple_item simple_item-second">
+                    <div class="simple_item-img">
+                        <img src="{{ section.settings.step_2_image  | img_url: 'master' }}" alt="">
+                    </div>
+                    <div class="simple_item-content">
+                        <p>{{ section.settings.step_2_text }}</p>
+                        <div class="simple_item-list">
+                            <ul>
+                                {%- for block in section.blocks -%}
+                                    <li>
+                                        <a href="{{ block.settings.button_url }}"> <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M7.99982 6.40906C7.12281 6.40906 6.40871 7.12281 6.40871 7.99982C6.40871 8.87719 7.12281 9.59129 7.99982 9.59129C8.87719 9.59129 9.59094 8.87719 9.59094 7.99982C9.59094 7.12281 8.87719 6.40906 7.99982 6.40906ZM7.99982 6.40906C7.12281 6.40906 6.40871 7.12281 6.40871 7.99982C6.40871 8.87719 7.12281 9.59129 7.99982 9.59129C8.87719 9.59129 9.59094 8.87719 9.59094 7.99982C9.59094 7.12281 8.87719 6.40906 7.99982 6.40906ZM10.6505 3.81489H5.34948C4.50337 3.81489 3.81489 4.50337 3.81489 5.34948V10.6505C3.81489 11.4966 4.50337 12.1851 5.34948 12.1851H10.6505C11.4966 12.1851 12.1851 11.4966 12.1851 10.6505V5.34948C12.1851 4.50337 11.4966 3.81489 10.6505 3.81489ZM7.99982 10.7555C6.48068 10.7555 5.24451 9.51932 5.24451 7.99982C5.24451 6.48068 6.48068 5.24451 7.99982 5.24451C9.51932 5.24451 10.7555 6.48068 10.7555 7.99982C10.7555 9.51932 9.51932 10.7555 7.99982 10.7555ZM10.844 5.81432C10.4845 5.81432 10.192 5.52187 10.192 5.16235C10.192 4.80284 10.4845 4.51039 10.844 4.51039C11.2035 4.51039 11.4959 4.80284 11.4959 5.16235C11.4959 5.52187 11.2035 5.81432 10.844 5.81432ZM7.99982 6.40906C7.12281 6.40906 6.40871 7.12281 6.40871 7.99982C6.40871 8.87719 7.12281 9.59129 7.99982 9.59129C8.87719 9.59129 9.59094 8.87719 9.59094 7.99982C9.59094 7.12281 8.87719 6.40906 7.99982 6.40906ZM10.6505 3.81489H5.34948C4.50337 3.81489 3.81489 4.50337 3.81489 5.34948V10.6505C3.81489 11.4966 4.50337 12.1851 5.34948 12.1851H10.6505C11.4966 12.1851 12.1851 11.4966 12.1851 10.6505V5.34948C12.1851 4.50337 11.4966 3.81489 10.6505 3.81489ZM7.99982 10.7555C6.48068 10.7555 5.24451 9.51932 5.24451 7.99982C5.24451 6.48068 6.48068 5.24451 7.99982 5.24451C9.51932 5.24451 10.7555 6.48068 10.7555 7.99982C10.7555 9.51932 9.51932 10.7555 7.99982 10.7555ZM10.844 5.81432C10.4845 5.81432 10.192 5.52187 10.192 5.16235C10.192 4.80284 10.4845 4.51039 10.844 4.51039C11.2035 4.51039 11.4959 4.80284 11.4959 5.16235C11.4959 5.52187 11.2035 5.81432 10.844 5.81432ZM7.99982 6.40906C7.12281 6.40906 6.40871 7.12281 6.40871 7.99982C6.40871 8.87719 7.12281 9.59129 7.99982 9.59129C8.87719 9.59129 9.59094 8.87719 9.59094 7.99982C9.59094 7.12281 8.87719 6.40906 7.99982 6.40906ZM0 0V16H16V0H0ZM13.3493 10.6505C13.3493 12.1388 12.1388 13.3493 10.6505 13.3493H5.34948C3.86123 13.3493 2.65069 12.1388 2.65069 10.6505V5.34948C2.65069 3.86123 3.86123 2.65069 5.34948 2.65069H10.6505C12.1388 2.65069 13.3493 3.86123 13.3493 5.34948V10.6505ZM10.6505 3.81489H5.34948C4.50337 3.81489 3.81489 4.50337 3.81489 5.34948V10.6505C3.81489 11.4966 4.50337 12.1851 5.34948 12.1851H10.6505C11.4966 12.1851 12.1851 11.4966 12.1851 10.6505V5.34948C12.1851 4.50337 11.4966 3.81489 10.6505 3.81489ZM7.99982 10.7555C6.48068 10.7555 5.24451 9.51932 5.24451 7.99982C5.24451 6.48068 6.48068 5.24451 7.99982 5.24451C9.51932 5.24451 10.7555 6.48068 10.7555 7.99982C10.7555 9.51932 9.51932 10.7555 7.99982 10.7555ZM10.844 5.81432C10.4845 5.81432 10.192 5.52187 10.192 5.16235C10.192 4.80284 10.4845 4.51039 10.844 4.51039C11.2035 4.51039 11.4959 4.80284 11.4959 5.16235C11.4959 5.52187 11.2035 5.81432 10.844 5.81432ZM7.99982 6.40906C7.12281 6.40906 6.40871 7.12281 6.40871 7.99982C6.40871 8.87719 7.12281 9.59129 7.99982 9.59129C8.87719 9.59129 9.59094 8.87719 9.59094 7.99982C9.59094 7.12281 8.87719 6.40906 7.99982 6.40906ZM7.99982 6.40906C7.12281 6.40906 6.40871 7.12281 6.40871 7.99982C6.40871 8.87719 7.12281 9.59129 7.99982 9.59129C8.87719 9.59129 9.59094 8.87719 9.59094 7.99982C9.59094 7.12281 8.87719 6.40906 7.99982 6.40906ZM7.99982 6.40906C7.12281 6.40906 6.40871 7.12281 6.40871 7.99982C6.40871 8.87719 7.12281 9.59129 7.99982 9.59129C8.87719 9.59129 9.59094 8.87719 9.59094 7.99982C9.59094 7.12281 8.87719 6.40906 7.99982 6.40906ZM10.6505 3.81489H5.34948C4.50337 3.81489 3.81489 4.50337 3.81489 5.34948V10.6505C3.81489 11.4966 4.50337 12.1851 5.34948 12.1851H10.6505C11.4966 12.1851 12.1851 11.4966 12.1851 10.6505V5.34948C12.1851 4.50337 11.4966 3.81489 10.6505 3.81489ZM7.99982 10.7555C6.48068 10.7555 5.24451 9.51932 5.24451 7.99982C5.24451 6.48068 6.48068 5.24451 7.99982 5.24451C9.51932 5.24451 10.7555 6.48068 10.7555 7.99982C10.7555 9.51932 9.51932 10.7555 7.99982 10.7555ZM10.844 5.81432C10.4845 5.81432 10.192 5.52187 10.192 5.16235C10.192 4.80284 10.4845 4.51039 10.844 4.51039C11.2035 4.51039 11.4959 4.80284 11.4959 5.16235C11.4959 5.52187 11.2035 5.81432 10.844 5.81432ZM7.99982 6.40906C7.12281 6.40906 6.40871 7.12281 6.40871 7.99982C6.40871 8.87719 7.12281 9.59129 7.99982 9.59129C8.87719 9.59129 9.59094 8.87719 9.59094 7.99982C9.59094 7.12281 8.87719 6.40906 7.99982 6.40906ZM7.99982 6.40906C7.12281 6.40906 6.40871 7.12281 6.40871 7.99982C6.40871 8.87719 7.12281 9.59129 7.99982 9.59129C8.87719 9.59129 9.59094 8.87719 9.59094 7.99982C9.59094 7.12281 8.87719 6.40906 7.99982 6.40906ZM7.99982 6.40906C7.12281 6.40906 6.40871 7.12281 6.40871 7.99982C6.40871 8.87719 7.12281 9.59129 7.99982 9.59129C8.87719 9.59129 9.59094 8.87719 9.59094 7.99982C9.59094 7.12281 8.87719 6.40906 7.99982 6.40906ZM10.6505 3.81489H5.34948C4.50337 3.81489 3.81489 4.50337 3.81489 5.34948V10.6505C3.81489 11.4966 4.50337 12.1851 5.34948 12.1851H10.6505C11.4966 12.1851 12.1851 11.4966 12.1851 10.6505V5.34948C12.1851 4.50337 11.4966 3.81489 10.6505 3.81489ZM7.99982 10.7555C6.48068 10.7555 5.24451 9.51932 5.24451 7.99982C5.24451 6.48068 6.48068 5.24451 7.99982 5.24451C9.51932 5.24451 10.7555 6.48068 10.7555 7.99982C10.7555 9.51932 9.51932 10.7555 7.99982 10.7555ZM10.844 5.81432C10.4845 5.81432 10.192 5.52187 10.192 5.16235C10.192 4.80284 10.4845 4.51039 10.844 4.51039C11.2035 4.51039 11.4959 4.80284 11.4959 5.16235C11.4959 5.52187 11.2035 5.81432 10.844 5.81432ZM7.99982 6.40906C7.12281 6.40906 6.40871 7.12281 6.40871 7.99982C6.40871 8.87719 7.12281 9.59129 7.99982 9.59129C8.87719 9.59129 9.59094 8.87719 9.59094 7.99982C9.59094 7.12281 8.87719 6.40906 7.99982 6.40906Z" fill="#FF7506"/>
+                                            </svg>
+                                            {{ block.settings.button_text }}</a>
+                                    </li>
+                                {%- endfor -%}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="simple_item simple_item-third">
+                    <div class="simple_item-img">
+                        <img src="{{ section.settings.step_3_image  | img_url: 'master' }}" alt="">
+                    </div>
+                    <div class="simple_item-content">
+                        <p>{{ section.settings.step_3_text }}</p>
+                        <a class="simple_item-button" href="{{ section.settings.step_3_button_url }}">{{ section.settings.step_3_button_text }}</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
-{{section.settings.step_1_image}}
-{{section.settings.step_1_text}}
 
-{{section.settings.step_2_image}}
-{{section.settings.step_2_text}}
-{%- for block in section.blocks -%}
-    {{block.type}}
-    {{block.settings.button_text}}
-    {{block.settings.button_url}}
-{%- endfor -%}
+<style>
 
-{{section.settings.step_3_image}}
-{{section.settings.step_3_text}}
-{{section.settings.step_3_button_text}}
-{{section.settings.step_3_button_url}}
+    .simple_steps-wrapper {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 50px;
+    }
+    .simple_item {
+        display: flex;
+        flex-direction: column;
+    }
+    .simple_item-first {
+        flex: 0 1 25%;
+    }
+    .simple_item-second {
+        flex: 0 1 35%;
+    }
+    .simple_item-third {
+        flex: 0 1 25%;
+    }
+    .simple_item-content p {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 150%;
+        color: #000000;
+        margin-bottom: 0;
+        margin-top: 20px;
+    }
+    .simple_item-content {
+        flex: 0 1 50%;
+    }
+    .simple_item-img img {
+        min-height: 180px;
+        max-height: 180px;
+        object-fit: contain;
+    }
+    .simple_item-list ul {
+        list-style: none;
+        columns: 2;
+    }
+    .simple_item-list ul li {
+        margin-bottom: 10px;
+        flex: 0 1 40%;
+    }
+    .simple_item-list ul li a {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 150%;
+        color: #1A1A1A;
+        text-decoration: none;
+        text-transform: uppercase;
+        transition: all .3s;
+        display: flex;
+        align-items: center;
+    }
+    .simple_item-list ul li a svg {
+        margin-right: 5px;
+    }
+    .simple_item-list ul li a:hover {
+        color: #FF7506;
+    }
+    .simple_item-button {
+        background: #FF7506;
+        border: 2px solid #FF7506;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 150%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #FFFFFF!important;
+        text-decoration: none;
+        width: 100%;
+        margin-top: 10px;
+        padding: 10px 0;
+    }
+
+    @media (max-width: 1020px) {
+        .simple_item-img img {
+            min-height: 150px;
+            max-height: 150px;
+        }
+        .simple_item-list ul {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+        }
+        .simple_steps-wrapper {
+            flex-direction: column;
+            align-items: center;
+            padding: 40px 15px;
+        }
+    }
+    @media (max-width: 767px) {
+        .simple_item {
+            justify-content: flex-start;
+            margin-bottom: 24px;
+        }
+        .simple_item-list ul li {
+            flex: 0 1 45%;
+        }
+        .simple_item-list ul li a {
+            font-size: 12px;
+        }
+    }
+
+</style>
+
 {% schema %}
 {
   "name": "Gift for review",
